src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_small_window-4.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_[...]_small_window  ◆ COMPLETE         
 Used ##.#K · Can reclaim ##.#K · Content 12.0K · 4 items   
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
▟▐ LIST ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏   file2                                4.0K   33.3%      ▕
▏   file3                                4.0K   33.3%      ▕
▏▌▸ subfolder1                           4.0K   33.3%      ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏ ▟▐ DELETING ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜ ▕
▏ ▏# of # items processed.                               ▕ ▕
▏ ▏Every item is checked again before removal.           ▕ ▕
▏ ▏New or changed items are skipped.                     ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏[Esc/q] stop options                                  ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔ ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                            
▟▐ SELECTED ITEM ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏subfolder1                                                ▕
▏◆ COMPLETE · folder                                       ▕
▏Actions unavailable                                       ▕
▏Can reclaim #.#K · Space used #.#K                        ▕
▏Content size 4.0K · 1 item                                ▕
▏Item check: Inode { device_id: ########, inode_number: ##…▕
▏Scan result: included                                     ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  ? help      
Excise · REDUCED MOTION
