src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_small_window-6.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_[...]_small_window  ◆ COMPLETE         
 Used #.#K · Can reclaim #.#K · Content 8.0K · 2 items      
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
▟▐ LIST ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏▌  file2                                4.0K   50.0%      ▕
▏   file3                                4.0K   50.0%      ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏ ▟▐ QUIT ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜ ▕
▏ ▏                     Quit Excise?                     ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                       [y] Quit                       ▕ ▕
▏ ▏                [Esc/q/n] Keep working                ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔ ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                            
▟▐ SELECTED ITEM ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file2                                                     ▕
▏◆ COMPLETE · file                                         ▕
▏Actions unavailable                                       ▕
▏Can reclaim #.#K · Space used #.#K                        ▕
▏Content size 4.0K · 0 items                               ▕
▏Item check: Inode { device_id: ########, inode_number: ##…▕
▏Scan result: included                                     ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  ? help      
Excise · REDUCED MOTION
