src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_small_window-7.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[6]"
---
 Total: 8.0K | /tmp/excise_tests/delete_folder_small_window 
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file2                           │
│                                                          │
│                                                          │
│                        4.0K (50%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file3                           │
│                                                          │
│                                                          │
│                        4.0K (50%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                                            
 ←↓↑→/<ENTER>/<ESC>: navigate, <BACKSPACE>: del
