src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_small_window-8.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[7]"
---
 EXCISE  /tmp/excise_t[...]_small_window  ◆ COMPLETE        
 allocated 8.0K   reclaim 8.0K   apparent 8.0K   2 entries  
────────────────────────────────────────────────────────────
┌ LIST ────────────────────────────────────────────────────┐
│   file2                                4.0K   50.0%      │
│   file3                                4.0K   50.0%      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ ╔ ! DELETION RESULT · PRECISE ═════════════════════════╗ │
│ ║                                                      ║ │
│ ║deleted       2                                       ║ │
│ ║changed       0                                       ║ │
│ ║missing       0                                       ║ │
│ ║failed        0                                       ║ │
│ ║unattempted   0                                       ║ │
│ ║                                                      ║ │
│ ║Result is precise. [Enter/Esc] close                  ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ╚══════════════════════════════════════════════════════╝ │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace del
Excise · REDUCED MOTION
